# gmail-attachment-downloader

./: .env.example  .gitignore  Makefile  config.yaml  go.mod  go.sum  pyproject.toml
cmd/gmail-downloader/: main.go
config/: config.yaml
internal/app/: app.go
internal/config/: config.go
internal/downloader/: downloader.go
internal/gmail/: client.go
internal/utils/: email.go  files.go  files_test.go
legacy/: README.md  pyproject.toml
legacy/config/: config.yaml
legacy/src/gmail_downloader/: config.py  main.py
legacy/tests/: test_config.py  test_downloader.py
src/gmail_downloader/: __init__.py  config.py  downloader.py  gmail_client.py  tags  utils.py
test/: integration_test.go
tests/: test_gmail_client.py  test_utils.py
